# Polar-Python-SDK

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.ps1
.github/workflows/: ci.yml  publish.yml
scripts/: monitor_dual_polar.py  monitor_polar_terminal.py  scan_ble.py
src/polar_ble_sdk/: __init__.py  cli.py  dashboard_utils.py
src/polar_ble_sdk/_pmd/: __init__.py  __main__.py  cli.py  device.py  exceptions.py
src/polar_ble_sdk/_pmd/constants/: __init__.py  pmd_control_operation_code.py  pmd_control_point_error_code.py  pmd_measurement_type.py  pmd_setting_type.py  polar_characteristic.py
src/polar_ble_sdk/_pmd/models/: __init__.py  acc_data.py  ecg_data.py  gyro_data.py  hr_data.py  mag_data.py  measurement_settings.py  pmd_data_frame.py  ppg_data.py  ppi_data.py
src/polar_ble_sdk/_pmd/parsers/: __init__.py  compression.py  hr.py  polar.py
src/polar_ble_sdk/connector/: ble_discovery.py  schemas.py
src/polar_ble_sdk/connector/exporters/: queue_sink.py
src/polar_ble_sdk/connector/stream/: base.py  h10.py  verity_sense.py
tests/: conftest.py
