[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polar-ble-sdk"
version = "1.0.0"
authors = [
    { name = "Aleph Campos da Silveira", email = "aleph.camposdasilveira@tuni.fi" }
]
description = "An open-source Python SDK for connecting, monitoring, and capturing raw physiological and IMU data from Polar BLE devices."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
]
dependencies = [
    "bleak",
    "rich",
]

[project.scripts]
monitor-polar = "polar_ble_sdk.cli:_entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.venv
  | \.venv313
  | __pycache__
)/
'''

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio",
    "black",
    "mypy",
    "ruff",
    "pre-commit",
    "pip-audit",
    "vulture",
    "radon",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [".venv", ".venv313", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long — handled by black
]

[tool.ruff.lint.isort]
known-first-party = ["polar_ble_sdk"]

[tool.mypy]
ignore_missing_imports = true
warn_unused_configs = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
norecursedirs = [".venv", "reference"]
